--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "js2xmlparser": "^4.0.1",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
     "mongoose": "^5.9.26",
